Version 5.9.13
- Fixed incorrect varargs leaf function optimization
- Make C const arrays always go into DAT, to save space

Version 5.9.12
- Added LINE INPUT to BASIC
- Added definitions for BUFSIZ and L_tmpnam to stdio.h
- Added FREEFILE function to BASIC
- Added new C intrinsics __builtin_bswap16, __builtin_bswap32, __builtin_parity, __builtin_popcount
- Changed the way C global variables are handled in objects; they used to always be shared between variables, but now can be proper member variables in some circumstances
- Fixed "CLASS USING" file name lookups inside CLASS in BASIC
- Fixed incorrect address calculation when AUGD is needed for CALLPA
- Made clkmode_ and similar symbols accessible in submodules
- Modified SD card code to (I hope) support multiple cards

Version 5.9.11
- Added BOOLEAN keyword to BASIC
- Added some additional optimizations (thanks again, Ada!)
- Added -Wextra flag (ignored for now) to flexcc
- Fixed -gbrk bug which crept in last release
- Fixed some problems parsing C function pointer type declarations
- Fixed some optimizations incorrectly happening to ORG/END assembly
- Fixed some other incorrect optimizations
- Fixed "extern" in C function definitions
- Made it so defining a _clkmode enum in C works as intended
- Reserved REDIM and PRESERVE keywords in BASIC
- Some more PASM optimizations from Ada (thanks!)

Version 5.9.10
- Added a LOT of helpful optimizations contributed by Ada Gottensträter
- Added __HAVE_FCACHE__ define if FCACHE is enabled (also contributed by Ada)
- Added --nostdlib flag to suppress default include files
- Added KILL function to delete files in BASIC
- Added ELSE clause to single line IF in BASIC
- Actually fail compilation if a preprocessor #error directive is found in Spin
- Fixed some bugs in time related functions
- Fixed FCACHE not being enabled during system module compilation
- Fixed a nasty condition code printing bug (thanks Ada!)
- Fixed DEBUG with multiple return valued functions